# Deploy-Sense

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  environment.yml  package-lock.json  pyproject.toml  readme.md  run_tests.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a754662653ac_initial_schema.py
architecture/: 01-system-architecture.md  02-microservices.md  03-api-definitions.md  04-kafka-events.md  05-database-schemas.md  06-kubernetes-architecture.md  07-observability.md  08-cicd-pipelines.md  09-deployment-strategy.md  10-implementation-roadmap.md
deploysense/: __init__.py  config.py  logging.py  models.py
deploysense/ai/: __init__.py  engine.py
deploysense/api/: __init__.py  audit.py  auth.py  main.py  rbac.py  schemas.py  security.py  websocket.py
deploysense/api/routes/: __init__.py  admin.py  ai.py  alerts.py  auth.py  deployments.py  repositories.py  services.py  webhooks.py
deploysense/core/: __init__.py
deploysense/dashboard/: __init__.py  routes.py
deploysense/dashboard/templates/: alerts.html  base.html  deployment_detail.html  deployments.html  overview.html  risk.html  services.html
deploysense/database/: __init__.py  base.py  session.py
deploysense/integrations/: __init__.py  github_client.py
deploysense/risk_engine/: __init__.py  historical.py  main.py  routes.py  scoring.py
deploysense/static/: dashboard.css
deploysense/worker/: __init__.py  jobs.py  main.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/deployments/: page.tsx
frontend/src/app/deployments/[id]/: page.tsx
frontend/src/app/repositories/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: AIAnalysisSection.tsx  Badge.tsx  EmptyState.tsx  FilterBar.tsx  PageHeader.tsx  Pagination.tsx  Panel.tsx  SimulateDeploymentModal.tsx  StatCard.tsx
frontend/src/lib/: api.ts  types.ts
helm/deploysense/: Chart.yaml  values.yaml
helm/deploysense/templates/: api-service.yaml  ingress.yaml  network-policies.yaml  risk-engine.yaml  worker-service.yaml
infra/argocd/: application.yaml
infra/grafana/dashboards/: deploysense-overview.json
infra/grafana/provisioning/dashboards/: default.yaml
infra/grafana/provisioning/datasources/: default.yaml
infra/prometheus/: alerts.yml  prometheus.yml
infra/terraform/: database.tf  eks.tf  main.tf  outputs.tf  variables.tf  vpc.tf
infra/terraform/environments/: production.tfvars
scripts/: create_real_deployment.py  fix_db.py  seed_demo_data.py  seed_test_data.py
tests/: __init__.py  test_ai_engine.py  test_api.py  test_rbac_security.py  test_risk_scoring.py  test_websocket.py
