[project]
name = "deploysense"
version = "0.1.0"
description = "Deployment Intelligence Platform — predicts deployment risk and evaluates deployment health"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
    # ─── Web Framework ───────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # ─── Database ────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ─── Redis ───────────────────────────────────────────────────────────
    "redis[hiredis]>=5.2.0",

    # ─── Validation & Serialization ──────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # ─── HTTP Client ─────────────────────────────────────────────────────
    "httpx>=0.28.0",

    # ─── Observability ───────────────────────────────────────────────────
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",

    # ─── Background Tasks ────────────────────────────────────────────────
    "apscheduler>=3.10.4",

    # ─── Auth ────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # ─── Utilities ───────────────────────────────────────────────────────
    "python-multipart>=0.0.12",
    "tenacity>=9.0.0",

    # ─── Dashboard (Sprint 3) ────────────────────────────────────────────
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["deploysense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires DB/Redis)",
    "e2e: End-to-end tests (requires full stack)",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["redis.*", "apscheduler.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deploysense*"]

